<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textnim"
        android:layout_width="88dp"
        android:layout_height="36dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="412dp"
        android:text="@string/nim"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/texthobi"
        android:layout_width="88dp"
        android:layout_height="36dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="464dp"
        android:text="@string/hobi"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textdes"
        android:layout_width="88dp"
        android:layout_height="36dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="524dp"
        android:text="@string/deskipsi"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textbio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/biodata"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="250sp"
        android:layout_height="200sp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:src="@drawable/bio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.214"
        tools:ignore="UnknownId">

    </de.hdodenhof.circleimageview.CircleImageView>

    <TextView
        android:id="@+id/Nama"
        android:layout_width="88dp"
        android:layout_height="36dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="360dp"
        android:text="@string/nama"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nama1"
        android:layout_width="220dp"
        android:layout_height="42dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="24dp"
        android:text="@string/nama2"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

    <TextView
        android:id="@+id/nim"
        android:layout_width="220dp"
        android:layout_height="42dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="24dp"
        android:text="@string/nim2"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textnim"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

    <TextView
        android:id="@+id/hobi"
        android:layout_width="220dp"
        android:layout_height="42dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="24dp"
        android:text="@string/komik"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/texthobi"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="223dp"
        android:layout_height="77dp"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="24dp"
        android:text="@string/mahasiswi"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textdes"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

    <Button
        android:id="@+id/button"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="87dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="158dp"
        android:layout_marginBottom="61dp"
        android:orientation="vertical"
        android:text="@string/no_telp"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/desc" />

    <Button
        android:id="@+id/button3"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="93dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="61dp"
        android:orientation="vertical"
        android:text="@string/email"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/desc" />

    <Button
        android:id="@+id/button2"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="104dp"
        android:layout_height="48dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="61dp"
        android:orientation="vertical"
        android:text="@string/alamat"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textdes" />

</androidx.constraintlayout.widget.ConstraintLayout>

